<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MafiaHelper</string>
    <string name="caption_role_none">-</string>
    <string name="button_ok">OK</string>
    <string name="button_cancel">Cancel</string>
    
    <string name="dialog_delete_player_title">Delete Player</string>
    <string name="dialog_delete_player_message">Delete player from the list?</string>
    <string name="dialog_add_player_title">Add Player</string>
    
    <string name="dialog_add_role_title">Add role</string>
    <string name="dialog_edit_role_title">Edit role</string>
    <string name="dialog_add_role_name">Role name</string>
    <string name="dialog_add_role_side">Side</string>
    <string name="dialog_add_role_can_shoot">Can shoot</string>
    <string name="dialog_add_role_can_heal">Can heal</string>
    <string name="dialog_add_role_give_alibi">Give alibi</string>
    <string name="dialog_add_role_can_mute">Can mute</string>
    <string name="dialog_add_role_desc">Description</string>
    <string name="dialog_delete_role_title">Delete Role</string>
    <string name="dialog_delete_role_message">Delete role from the list?</string>
    <string name="dialog_select_role_title">Select role</string>
    
    <string name="action_roles">Roles</string>
    <string name="action_players">Players</string>
    <string name="action_rules">Rules</string>
    <string name="action_about">About App</string>
    <string name="action_add_player">Add</string>
    <string name="action_delete_player">Delete</string>
    <string name="action_add_role">Add</string>
    <string name="action_delete_role">Delete</string>
    <string name="action_edit_role">Edit</string>
    
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    
    <string-array name="side">
        <item >Man for himself</item>
        <item >Peace</item>
        <item >Mafia</item>
        <item >Yakudza</item>
    </string-array>

</resources>
