<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <group android:id="@+id/action_group_players" >
        <item
            android:id="@+id/action_add_player"
            android:icon="@drawable/ic_launcher"
            android:showAsAction="always"
            android:title="@string/action_add_player"/>
        <item
            android:id="@+id/action_show_roles"
            android:title="@string/action_roles">
        </item>
    </group>
    <group android:id="@+id/action_group_roles" >
        <item
            android:id="@+id/action_add_role"
            android:icon="@drawable/ic_launcher"
            android:showAsAction="always"
            android:title="@string/action_add_role"/>
        <item
            android:id="@+id/action_show_players"
            android:title="@string/action_players">
        </item>
    </group>

</menu>