<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#111"
    android:orientation="vertical" >

    <Button
        android:id="@+id/btnPlayers"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/action_players" />

    <Button
        android:id="@+id/btnRoles"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/action_roles" />

    <Button
        android:id="@+id/btnRules"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/action_rules" />

    <Button
        android:id="@+id/btnAbout"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/action_about" />

</LinearLayout>
